projects/android-lifecycle/1.1.0/docs/it.czerwinski.android.lifecycle.livedata/index.md
---
title: it.czerwinski.android.lifecycle.livedata -
---
//[Extensions for Jetpack Lifecycle](../index.html)/[it.czerwinski.android.lifecycle.livedata](index.html)



# Package it.czerwinski.android.lifecycle.livedata  
 [androidJvm] 

Extensions for Jetpack Lifecycle

   


## Types  
  
|  Name|  Summary| 
|---|---|
| <a name="it.czerwinski.android.lifecycle.livedata/ConstantLiveData///PointingToDeclaration/"></a>[ConstantLiveData](-constant-live-data/index.html)| <a name="it.czerwinski.android.lifecycle.livedata/ConstantLiveData///PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>class [ConstantLiveData](-constant-live-data/index.html)<[T](-constant-live-data/index.html)>(**value**: [T](-constant-live-data/index.html)) : [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](-constant-live-data/index.html)>   <br>More info  <br>[LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) that always emits a single constant value.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata/GroupedLiveData///PointingToDeclaration/"></a>[GroupedLiveData](-grouped-live-data/index.html)| <a name="it.czerwinski.android.lifecycle.livedata/GroupedLiveData///PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>class [GroupedLiveData](-grouped-live-data/index.html)<[K](-grouped-live-data/index.html), [V](-grouped-live-data/index.html)>(**keySelector**: ([V](-grouped-live-data/index.html)) -> [K](-grouped-live-data/index.html)) : [MediatorLiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/MediatorLiveData.html)<[V](-grouped-live-data/index.html)>   <br>More info  <br>[MediatorLiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/MediatorLiveData.html) subclass which provides a separate [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) per each result returned by keySelector function executed on subsequent values emitted by the source LiveData.  <br><br><br>


## Functions  
  
|  Name|  Summary| 
|---|---|
| <a name="it.czerwinski.android.lifecycle.livedata//addDirectSource/androidx.lifecycle.MediatorLiveData[TypeParam(bounds=[kotlin.Any?])]#androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[addDirectSource](add-direct-source.html)| <a name="it.czerwinski.android.lifecycle.livedata//addDirectSource/androidx.lifecycle.MediatorLiveData[TypeParam(bounds=[kotlin.Any?])]#androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>@[MainThread](https://developer.android.com/reference/kotlin/androidx/annotation/MainThread.html)()  <br>  <br>inline fun <[T](add-direct-source.html)> [MediatorLiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/MediatorLiveData.html)<in [T](add-direct-source.html)>.[addDirectSource](add-direct-source.html)(source: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<out [T](add-direct-source.html)>)  <br>More info  <br>Starts to listen the given source LiveData.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//combineLatest/#kotlin.Array[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]/PointingToDeclaration/"></a>[combineLatest](combine-latest.html)| <a name="it.czerwinski.android.lifecycle.livedata//combineLatest/#kotlin.Array[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](combine-latest.html)> [combineLatest](combine-latest.html)(vararg sources: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](combine-latest.html)>): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)<[T](combine-latest.html)?>>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting lists of latest values emitted by the given source LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[A](combine-latest.html), [B](combine-latest.html)> [combineLatest](combine-latest.html)(first: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[A](combine-latest.html)>, second: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[B](combine-latest.html)>): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[Pair](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)<[A](combine-latest.html)?, [B](combine-latest.html)?>>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting pairs of latest values emitted by the first and the second LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[T](combine-latest.html), [R](combine-latest.html)> [combineLatest](combine-latest.html)(vararg sources: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](combine-latest.html)>, combineFunction: ([List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)<[T](combine-latest.html)?>) -> [R](combine-latest.html)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[R](combine-latest.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting results of applying the given combineFunction to the latest values emitted by the given source LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[A](combine-latest.html), [B](combine-latest.html), [C](combine-latest.html)> [combineLatest](combine-latest.html)(first: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[A](combine-latest.html)>, second: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[B](combine-latest.html)>, third: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[C](combine-latest.html)>): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[Triple](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-triple/index.html)<[A](combine-latest.html)?, [B](combine-latest.html)?, [C](combine-latest.html)?>>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting triples of latest values emitted by the first, the second and the third LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[A](combine-latest.html), [B](combine-latest.html), [R](combine-latest.html)> [combineLatest](combine-latest.html)(first: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[A](combine-latest.html)>, second: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[B](combine-latest.html)>, combineFunction: ([A](combine-latest.html)?, [B](combine-latest.html)?) -> [R](combine-latest.html)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[R](combine-latest.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting results of applying the given combineFunction to the latest values emitted by the first and the second LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[A](combine-latest.html), [B](combine-latest.html), [C](combine-latest.html), [R](combine-latest.html)> [combineLatest](combine-latest.html)(first: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[A](combine-latest.html)>, second: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[B](combine-latest.html)>, third: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[C](combine-latest.html)>, combineFunction: ([A](combine-latest.html)?, [B](combine-latest.html)?, [C](combine-latest.html)?) -> [R](combine-latest.html)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[R](combine-latest.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting results of applying the given combineFunction to the latest values emitted by the first, the second and the third LiveData.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//defaultIfEmpty/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#TypeParam(bounds=[kotlin.Any?])/PointingToDeclaration/"></a>[defaultIfEmpty](default-if-empty.html)| <a name="it.czerwinski.android.lifecycle.livedata//defaultIfEmpty/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#TypeParam(bounds=[kotlin.Any?])/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](default-if-empty.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](default-if-empty.html)>.[defaultIfEmpty](default-if-empty.html)(defaultValue: [T](default-if-empty.html)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](default-if-empty.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) that emits the values emitted by this LiveData or a specified default value if this LiveData has not yet emitted any values at the time of observing.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[T](default-if-empty.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](default-if-empty.html)>.[defaultIfEmpty](default-if-empty.html)(defaultValueProducer: () -> [T](default-if-empty.html)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](default-if-empty.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) that emits the values emitted by this LiveData or a value returned by defaultValueProducer if this LiveData has not yet emitted any values at the time of observing.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//delayStart/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Long#kotlin.coroutines.CoroutineContext/PointingToDeclaration/"></a>[delayStart](delay-start.html)| <a name="it.czerwinski.android.lifecycle.livedata//delayStart/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Long#kotlin.coroutines.CoroutineContext/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](delay-start.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](delay-start.html)>.[delayStart](delay-start.html)(timeInMillis: [Long](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html), context: [CoroutineContext](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/index.html) = EmptyCoroutineContext): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](delay-start.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting values from this LiveData, after dropping values followed by newer values before timeInMillis expires since the result LiveData has been created.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//filter/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),kotlin.Boolean]/PointingToDeclaration/"></a>[filter](filter.html)| <a name="it.czerwinski.android.lifecycle.livedata//filter/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),kotlin.Boolean]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](filter.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](filter.html)>.[filter](filter.html)(predicate: ([T](filter.html)) -> [Boolean](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](filter.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting only values from this LiveData matching the given predicate.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//filterIsInstance/androidx.lifecycle.LiveData[*]#/PointingToDeclaration/"></a>[filterIsInstance](filter-is-instance.html)| <a name="it.czerwinski.android.lifecycle.livedata//filterIsInstance/androidx.lifecycle.LiveData[*]#/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>inline fun <[R](filter-is-instance.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<*>.[filterIsInstance](filter-is-instance.html)(): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[R](filter-is-instance.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting only values of type [R](filter-is-instance.html) from this LiveData.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//filterNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])?]#/PointingToDeclaration/"></a>[filterNotNull](filter-not-null.html)| <a name="it.czerwinski.android.lifecycle.livedata//filterNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])?]#/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](filter-not-null.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](filter-not-null.html)?>.[filterNotNull](filter-not-null.html)(): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](filter-not-null.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting only non-null values from this LiveData.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//groupBy/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[groupBy](group-by.html)| <a name="it.czerwinski.android.lifecycle.livedata//groupBy/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[K](group-by.html), [V](group-by.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[V](group-by.html)>.[groupBy](group-by.html)(keySelector: ([V](group-by.html)) -> [K](group-by.html)): [GroupedLiveData](-grouped-live-data/index.html)<[K](group-by.html), [V](group-by.html)>  <br>More info  <br>Returns a [GroupedLiveData](-grouped-live-data/index.html) providing a set of [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html), each emitting a different subset of values from this LiveData, based on the result of the given keySelector function.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//mapNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])?]/PointingToDeclaration/"></a>[mapNotNull](map-not-null.html)| <a name="it.czerwinski.android.lifecycle.livedata//mapNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])?]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](map-not-null.html), [R](map-not-null.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](map-not-null.html)>.[mapNotNull](map-not-null.html)(transform: ([T](map-not-null.html)) -> [R](map-not-null.html)?): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[R](map-not-null.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting only the non-null results of applying the given transform function to each value emitted by this LiveData.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//merge/#kotlin.Array[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]/PointingToDeclaration/"></a>[merge](merge.html)| <a name="it.czerwinski.android.lifecycle.livedata//merge/#kotlin.Array[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](merge.html)> [merge](merge.html)(vararg sources: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](merge.html)>): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](merge.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting each value emitted by any of the given LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>infix fun <[T](merge.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](merge.html)>.[merge](merge.html)(other: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](merge.html)>): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](merge.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting each value emitted by either this or other LiveData.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//reduce/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])?]#kotlin.Function2[TypeParam(bounds=[kotlin.Any?])?,TypeParam(bounds=[kotlin.Any?])?,TypeParam(bounds=[kotlin.Any?])?]/PointingToDeclaration/"></a>[reduce](reduce.html)| <a name="it.czerwinski.android.lifecycle.livedata//reduce/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])?]#kotlin.Function2[TypeParam(bounds=[kotlin.Any?])?,TypeParam(bounds=[kotlin.Any?])?,TypeParam(bounds=[kotlin.Any?])?]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](reduce.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](reduce.html)?>.[reduce](reduce.html)(operation: ([T](reduce.html)?, [T](reduce.html)?) -> [T](reduce.html)?): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](reduce.html)?>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting accumulated value starting with the first value emitted by this LiveData and applying operation from left to right to current accumulator value and each value emitted by this.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//reduceNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function2[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[reduceNotNull](reduce-not-null.html)| <a name="it.czerwinski.android.lifecycle.livedata//reduceNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function2[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](reduce-not-null.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](reduce-not-null.html)>.[reduceNotNull](reduce-not-null.html)(operation: ([T](reduce-not-null.html), [T](reduce-not-null.html)) -> [T](reduce-not-null.html)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](reduce-not-null.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting non-null accumulated value starting with the first non-null value emitted by this LiveData and applying operation from left to right to current accumulator value and each subsequent non-null value emitted by this LiveData.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//switch/androidx.lifecycle.LiveData[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]#/PointingToDeclaration/"></a>[switch](switch.html)| <a name="it.czerwinski.android.lifecycle.livedata//switch/androidx.lifecycle.LiveData[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]#/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](switch.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](switch.html)>>.[switch](switch.html)(): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](switch.html)>  <br>More info  <br>Converts [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) that emits other LiveData into a single LiveData that emits the items emitted by the most recently emitted LiveData.  <br><br><br>
| <a name="it.czerwinski.android.lifecycle.livedata//throttleWithTimeout/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Long#kotlin.coroutines.CoroutineContext/PointingToDeclaration/"></a>[throttleWithTimeout](throttle-with-timeout.html)| <a name="it.czerwinski.android.lifecycle.livedata//throttleWithTimeout/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Long#kotlin.coroutines.CoroutineContext/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](throttle-with-timeout.html)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](throttle-with-timeout.html)>.[throttleWithTimeout](throttle-with-timeout.html)(timeInMillis: [Long](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html), context: [CoroutineContext](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/index.html) = EmptyCoroutineContext): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](throttle-with-timeout.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting values from this LiveData, after dropping values followed by newer values before timeInMillis expires.  <br><br><br>

