projects/android-lifecycle/1.2.0/docs/it.czerwinski.android.lifecycle.livedata/index.md
---
title: it.czerwinski.android.lifecycle.livedata -
---
//[Extensions for Jetpack Lifecycle](../../index.md)/[it.czerwinski.android.lifecycle.livedata](index.md)



# Package it.czerwinski.android.lifecycle.livedata  
 [androidJvm] 

Extensions for Jetpack Lifecycle

   


## Types  
  
|  Name |  Summary | 
|---|---|
| <a name="it.czerwinski.android.lifecycle.livedata/ConstantLiveData///PointingToDeclaration/"></a>[ConstantLiveData](-constant-live-data/index.md)| <a name="it.czerwinski.android.lifecycle.livedata/ConstantLiveData///PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>class [ConstantLiveData](-constant-live-data/index.md)<[T](-constant-live-data/index.md)>(**value**: [T](-constant-live-data/index.md)) : [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](-constant-live-data/index.md)>   <br>More info  <br>[LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) that always emits a single constant value.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata/GroupedLiveData///PointingToDeclaration/"></a>[GroupedLiveData](-grouped-live-data/index.md)| <a name="it.czerwinski.android.lifecycle.livedata/GroupedLiveData///PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>class [GroupedLiveData](-grouped-live-data/index.md)<[K](-grouped-live-data/index.md), [V](-grouped-live-data/index.md)>(**keySelector**: ([V](-grouped-live-data/index.md)) -> [K](-grouped-live-data/index.md)) : [MediatorLiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/MediatorLiveData.html)<[V](-grouped-live-data/index.md)>   <br>More info  <br>[MediatorLiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/MediatorLiveData.html) subclass which provides a separate [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) per each result returned by keySelector function executed on subsequent values emitted by the source LiveData.  <br><br><br>|


## Functions  
  
|  Name |  Summary | 
|---|---|
| <a name="it.czerwinski.android.lifecycle.livedata//addDirectSource/androidx.lifecycle.MediatorLiveData[TypeParam(bounds=[kotlin.Any?])]#androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[addDirectSource](add-direct-source.md)| <a name="it.czerwinski.android.lifecycle.livedata//addDirectSource/androidx.lifecycle.MediatorLiveData[TypeParam(bounds=[kotlin.Any?])]#androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>@[MainThread](https://developer.android.com/reference/kotlin/androidx/annotation/MainThread.html)()  <br>  <br>inline fun <[T](add-direct-source.md)> [MediatorLiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/MediatorLiveData.html)<in [T](add-direct-source.md)>.[addDirectSource](add-direct-source.md)(source: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<out [T](add-direct-source.md)>)  <br>More info  <br>Starts to listen the given [source](add-direct-source.md) LiveData.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//combineLatest/#kotlin.Array[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]/PointingToDeclaration/"></a>[combineLatest](combine-latest.md)| <a name="it.czerwinski.android.lifecycle.livedata//combineLatest/#kotlin.Array[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](combine-latest.md)> [combineLatest](combine-latest.md)(vararg sources: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](combine-latest.md)>): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)<[T](combine-latest.md)?>>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting lists of latest values emitted by the given source LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[A](combine-latest.md), [B](combine-latest.md)> [combineLatest](combine-latest.md)(first: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[A](combine-latest.md)>, second: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[B](combine-latest.md)>): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[Pair](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)<[A](combine-latest.md)?, [B](combine-latest.md)?>>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting pairs of latest values emitted by the [first](combine-latest.md) and the [second](combine-latest.md) LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[T](combine-latest.md), [R](combine-latest.md)> [combineLatest](combine-latest.md)(vararg sources: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](combine-latest.md)>, combineFunction: ([List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)<[T](combine-latest.md)?>) -> [R](combine-latest.md)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[R](combine-latest.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting results of applying the given [combineFunction](combine-latest.md) to the latest values emitted by the given source LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[A](combine-latest.md), [B](combine-latest.md), [C](combine-latest.md)> [combineLatest](combine-latest.md)(first: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[A](combine-latest.md)>, second: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[B](combine-latest.md)>, third: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[C](combine-latest.md)>): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[Triple](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-triple/index.html)<[A](combine-latest.md)?, [B](combine-latest.md)?, [C](combine-latest.md)?>>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting triples of latest values emitted by the [first](combine-latest.md), the [second](combine-latest.md) and the [third](combine-latest.md) LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[A](combine-latest.md), [B](combine-latest.md), [R](combine-latest.md)> [combineLatest](combine-latest.md)(first: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[A](combine-latest.md)>, second: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[B](combine-latest.md)>, combineFunction: ([A](combine-latest.md)?, [B](combine-latest.md)?) -> [R](combine-latest.md)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[R](combine-latest.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting results of applying the given [combineFunction](combine-latest.md) to the latest values emitted by the [first](combine-latest.md) and the [second](combine-latest.md) LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[A](combine-latest.md), [B](combine-latest.md), [C](combine-latest.md), [R](combine-latest.md)> [combineLatest](combine-latest.md)(first: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[A](combine-latest.md)>, second: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[B](combine-latest.md)>, third: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[C](combine-latest.md)>, combineFunction: ([A](combine-latest.md)?, [B](combine-latest.md)?, [C](combine-latest.md)?) -> [R](combine-latest.md)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[R](combine-latest.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting results of applying the given [combineFunction](combine-latest.md) to the latest values emitted by the [first](combine-latest.md), the [second](combine-latest.md) and the [third](combine-latest.md) LiveData.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//defaultIfEmpty/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#TypeParam(bounds=[kotlin.Any?])/PointingToDeclaration/"></a>[defaultIfEmpty](default-if-empty.md)| <a name="it.czerwinski.android.lifecycle.livedata//defaultIfEmpty/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#TypeParam(bounds=[kotlin.Any?])/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](default-if-empty.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](default-if-empty.md)>.[defaultIfEmpty](default-if-empty.md)(defaultValue: [T](default-if-empty.md)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](default-if-empty.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) that emits the values emitted by this LiveData or a specified default value if this LiveData has not yet emitted any values at the time of observing.  <br><br><br>[androidJvm]  <br>Content  <br>fun <[T](default-if-empty.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](default-if-empty.md)>.[defaultIfEmpty](default-if-empty.md)(defaultValueProducer: () -> [T](default-if-empty.md)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](default-if-empty.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) that emits the values emitted by this LiveData or a value returned by [defaultValueProducer](default-if-empty.md) if this LiveData has not yet emitted any values at the time of observing.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//delayStart/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Long#kotlin.coroutines.CoroutineContext/PointingToDeclaration/"></a>[delayStart](delay-start.md)| <a name="it.czerwinski.android.lifecycle.livedata//delayStart/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Long#kotlin.coroutines.CoroutineContext/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](delay-start.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](delay-start.md)>.[delayStart](delay-start.md)(timeInMillis: [Long](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html), context: [CoroutineContext](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/index.html) = EmptyCoroutineContext): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](delay-start.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting values from this LiveData, after dropping values followed by newer values before [timeInMillis](delay-start.md) expires since the result LiveData has been created.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//filter/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),kotlin.Boolean]/PointingToDeclaration/"></a>[filter](filter.md)| <a name="it.czerwinski.android.lifecycle.livedata//filter/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),kotlin.Boolean]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](filter.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](filter.md)>.[filter](filter.md)(predicate: ([T](filter.md)) -> [Boolean](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](filter.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting only values from this LiveData matching the given [predicate](filter.md).  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//filterIsInstance/androidx.lifecycle.LiveData[*]#/PointingToDeclaration/"></a>[filterIsInstance](filter-is-instance.md)| <a name="it.czerwinski.android.lifecycle.livedata//filterIsInstance/androidx.lifecycle.LiveData[*]#/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>inline fun <[R](filter-is-instance.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<*>.[filterIsInstance](filter-is-instance.md)(): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[R](filter-is-instance.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting only values of type [R](filter-is-instance.md) from this LiveData.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//filterNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])?]#/PointingToDeclaration/"></a>[filterNotNull](filter-not-null.md)| <a name="it.czerwinski.android.lifecycle.livedata//filterNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])?]#/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](filter-not-null.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](filter-not-null.md)?>.[filterNotNull](filter-not-null.md)(): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](filter-not-null.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting only non-null values from this LiveData.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//groupBy/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[groupBy](group-by.md)| <a name="it.czerwinski.android.lifecycle.livedata//groupBy/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[K](group-by.md), [V](group-by.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[V](group-by.md)>.[groupBy](group-by.md)(keySelector: ([V](group-by.md)) -> [K](group-by.md)): [GroupedLiveData](-grouped-live-data/index.md)<[K](group-by.md), [V](group-by.md)>  <br>More info  <br>Returns a [GroupedLiveData](-grouped-live-data/index.md) providing a set of [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html), each emitting a different subset of values from this LiveData, based on the result of the given [keySelector](group-by.md) function.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//intervalLiveData/#kotlin.Long#kotlin.coroutines.CoroutineContext/PointingToDeclaration/"></a>[intervalLiveData](interval-live-data.md)| <a name="it.czerwinski.android.lifecycle.livedata//intervalLiveData/#kotlin.Long#kotlin.coroutines.CoroutineContext/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun [intervalLiveData](interval-live-data.md)(timeInMillis: [Long](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html), context: [CoroutineContext](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/index.html) = EmptyCoroutineContext): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting a sequence of integer values, spaced by a given [timeInMillis](interval-live-data.md).  <br><br><br>[androidJvm]  <br>Content  <br>fun [intervalLiveData](interval-live-data.md)(context: [CoroutineContext](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/index.html) = EmptyCoroutineContext, timeInMillis: ([Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html)) -> [Long](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting a sequence of integer values, spaced by a result of a given [timeInMillis](interval-live-data.md) function invoked on the next value.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//mapNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])?]/PointingToDeclaration/"></a>[mapNotNull](map-not-null.md)| <a name="it.czerwinski.android.lifecycle.livedata//mapNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function1[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])?]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](map-not-null.md), [R](map-not-null.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](map-not-null.md)>.[mapNotNull](map-not-null.md)(transform: ([T](map-not-null.md)) -> [R](map-not-null.md)?): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[R](map-not-null.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting only the non-null results of applying the given [transform](map-not-null.md) function to each value emitted by this LiveData.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//merge/#kotlin.Array[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]/PointingToDeclaration/"></a>[merge](merge.md)| <a name="it.czerwinski.android.lifecycle.livedata//merge/#kotlin.Array[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](merge.md)> [merge](merge.md)(vararg sources: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](merge.md)>): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](merge.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting each value emitted by any of the given LiveData.  <br><br><br>[androidJvm]  <br>Content  <br>infix fun <[T](merge.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](merge.md)>.[merge](merge.md)(other: [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](merge.md)>): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](merge.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting each value emitted by either this or [other](merge.md) LiveData.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//reduce/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])?]#kotlin.Function2[TypeParam(bounds=[kotlin.Any?])?,TypeParam(bounds=[kotlin.Any?])?,TypeParam(bounds=[kotlin.Any?])?]/PointingToDeclaration/"></a>[reduce](reduce.md)| <a name="it.czerwinski.android.lifecycle.livedata//reduce/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])?]#kotlin.Function2[TypeParam(bounds=[kotlin.Any?])?,TypeParam(bounds=[kotlin.Any?])?,TypeParam(bounds=[kotlin.Any?])?]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](reduce.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](reduce.md)?>.[reduce](reduce.md)(operation: ([T](reduce.md)?, [T](reduce.md)?) -> [T](reduce.md)?): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](reduce.md)?>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting accumulated value starting with the first value emitted by this LiveData and applying [operation](reduce.md) from left to right to current accumulator value and each value emitted by this.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//reduceNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function2[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[reduceNotNull](reduce-not-null.md)| <a name="it.czerwinski.android.lifecycle.livedata//reduceNotNull/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Function2[TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?]),TypeParam(bounds=[kotlin.Any?])]/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](reduce-not-null.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](reduce-not-null.md)>.[reduceNotNull](reduce-not-null.md)(operation: ([T](reduce-not-null.md), [T](reduce-not-null.md)) -> [T](reduce-not-null.md)): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](reduce-not-null.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting non-null accumulated value starting with the first non-null value emitted by this LiveData and applying [operation](reduce-not-null.md) from left to right to current accumulator value and each subsequent non-null value emitted by this LiveData.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//switch/androidx.lifecycle.LiveData[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]#/PointingToDeclaration/"></a>[switch](switch.md)| <a name="it.czerwinski.android.lifecycle.livedata//switch/androidx.lifecycle.LiveData[androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]]#/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](switch.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](switch.md)>>.[switch](switch.md)(): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](switch.md)>  <br>More info  <br>Converts [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) that emits other LiveData into a single LiveData that emits the items emitted by the most recently emitted LiveData.  <br><br><br>|
| <a name="it.czerwinski.android.lifecycle.livedata//throttleWithTimeout/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Long#kotlin.coroutines.CoroutineContext/PointingToDeclaration/"></a>[throttleWithTimeout](throttle-with-timeout.md)| <a name="it.czerwinski.android.lifecycle.livedata//throttleWithTimeout/androidx.lifecycle.LiveData[TypeParam(bounds=[kotlin.Any?])]#kotlin.Long#kotlin.coroutines.CoroutineContext/PointingToDeclaration/"></a>[androidJvm]  <br>Content  <br>fun <[T](throttle-with-timeout.md)> [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](throttle-with-timeout.md)>.[throttleWithTimeout](throttle-with-timeout.md)(timeInMillis: [Long](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html), context: [CoroutineContext](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/index.html) = EmptyCoroutineContext): [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html)<[T](throttle-with-timeout.md)>  <br>More info  <br>Returns a [LiveData](https://developer.android.com/reference/kotlin/androidx/lifecycle/LiveData.html) emitting values from this LiveData, after dropping values followed by newer values before [timeInMillis](throttle-with-timeout.md) expires.  <br><br><br>|

